--- a/css.css
+++ b/css.css
@@ -1,24 +1,24 @@
-<meta name="viewport" content="initial-scale=1.0, width=device-width">
+
 body {
-	font-family: sans-serif;
-	margin: 0;
+  font-family: sans-serif;
+  margin: 0;
 }
 
 .section {
-	height: 100vh;
-	display: flex;
-	background-color: #E9967A;
+  height: 100vh;
+  display: flex;
+  background-color: #E9967A;
   justify-content: center;
-	align-items: center;
+  align-items: center;
 }
 
 .menu {
-	display: none;
-	width: 50px;
-	height: 50px;
-	background-color: #fff;
-	border-radius: 50%;
-	position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  background-color: #fff;
+  border-radius: 50%;
+  position: relative;
 }
 
  .menu span,
@@ -64,16 +64,24 @@ body {
    transform-origin:center; 
    transform: scaleX(1) translateX(0);
    opacity: 0;
- 
+                                              
  } */
  
 
-@media (max-width:320px){
+@media (max-width:480px){
   .menu {
     display:block;
   }
   .menu-nav {
     display:none;
+  }
+
+  @media (max-width:720px){
+    .menu {
+    display:none;
+  }
+  .menu-nav {
+    display:block;
   }
   
 }
