--- a/css.css
+++ b/css.css
@@ -29,8 +29,10 @@
  .menu span::after {
    
     position: absolute;
-    top: 50%; margin-top: -1px;
-    left: 50%;margin-left: -10px;
+    top: 50%;
+    margin-top: -1px;
+    left: 50%;
+    margin-left: -10px;
     width: 20px;
     height: 2px;
     background-color: #222;
