--- a/css.css
+++ b/css.css
@@ -73,11 +73,11 @@
  } */
  
 
-@media (max-width:320px){
+@media (max-width:375px){
   .menu {
     display: block;
   }
-  .menu-block {
+  .menu-nav {
     display: none;
   }
 
